--- a/c10/xpu/CMakeLists.txt
+++ b/c10/xpu/CMakeLists.txt
@@ -5,11 +5,13 @@
 include(../../cmake/public/xpu.cmake)
 
 set(C10_XPU_SRCS
+    XPUCachingAllocator.cpp
     XPUFunctions.cpp
     XPUStream.cpp
     XPUGuard.cpp
 )
 set(C10_XPU_HEADERS
+    XPUCachingAllocator.h
     XPUDeviceProp.h
     XPUException.h
     XPUFunctions.h
